--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.svg">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.svg">
     <meta name="theme-color" content="#4295f4">
-    <link rel="stylesheet" href="src/dist/css/style.css">
+    <link rel="stylesheet" href="src/assets/css/style.css">
+    <link rel="icon" href="src/assets/images/Crescent-Logo.svg" type="img/svg">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -22,7 +23,7 @@
                 <div class="brand header-brand">
                     <h1 class="m-0">
                         <a href="#">
-                            <img class="header-logo-image" src="src/dist/images/Crescent-Logo.svg" alt="Logo">
+                            <img class="header-logo-image" src="src/assets/images/Crescent-Logo.svg" alt="Logo">
                         </a>
                     </h1>
                 </div>
@@ -35,14 +36,17 @@
                 <div class="hero-inner">
                     <div class="hero-copy">
                         <h1 class="hero-title mt-0">Crescent API</h1>
-                        <p class="hero-paragraph">
+                        <p>
                             A revolutionary API serving all of your developer utility needs. Countless endpoints, quick response times, and easy-to-parse JSON responses. Integrating utility services into your application has never been easier.
                         </p>
-                        <div class="hero-cta"><a class="button button-primary" href="https://crescentapi.ml/docs">DOCUMENTATION</a><a class="button" href="https://ponjo.club/discord">DISCORD SERVER</a></div>
+                        <div class="hero-cta">
+                            <a class="button button-primary" href="https://crescentapi.ml/docs">DOCUMENTATION</a>
+                            <a class="button" href="https://ponjo.club/discord">DISCORD SERVER</a>
+                        </div>
                     </div>
                     <div class="hero-figure anime-element">
                         <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
-                            <rect width="528" height="396" style="fill:transparent;" />
+                            <rect width="528" height="396" style="fill:transparent;"/>
                         </svg>
                         <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
                         <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
@@ -57,8 +61,44 @@
                     </div>
                 </div>
             </div>
+        </section>
     </main>
+    <section class="features section">
+        <div class="container">
+            <div class="features-inner section-inner has-bottom-divider">
+                <div class="features-wrap">
+                    <div class="feature text-center is-revealing">
+                        <div class="feature-inner">
+                            <div class="feature-icon">
+                                <img src="src/assets/images/Feature-1.svg" alt="">
+                            </div>
+                            <h4 class="feature-title mt-24">Countless Endpoints</h4>
+                            <p class="text-sm mb-0">The Crescent API has numerous utility endpoints to assist you in creating a flexible, responsive, and productive application.</p>
+                        </div>
+                    </div>
+                    <div class="feature text-center is-revealing">
+                        <div class="feature-inner">
+                            <div class="feature-icon">
+                                <img src="src/assets/images/Feature-2.svg" alt="">
+                            </div>
+                            <h4 class="feature-title mt-24">Simple Responses</h4>
+                            <p class="text-sm mb-0">The API uses an easy-to-parse JSON response format to make it extremely simple for you to handle responses, with detailed documentation.</p>
+                        </div>
+                    </div>
+                    <div class="feature text-center is-revealing">
+                        <div class="feature-inner">
+                            <div class="feature-icon">
+                                <img src="src/assets/images/Feature-3.svg" alt="">
+                            </div>
+                            <h4 class="feature-title mt-24">Helpful Support</h4>
+                            <p class="text-sm mb-0">If you've found a bug or error in our API, or simply need assistance with an endpoint, our support team is always available to be contacted <a href="https://ponjo.club/discord">here</a>.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
-<script src="src/dist/js/Main.js"></script>
+<script src="src/assets/js/Main.js"></script>
 </body>
 </html>
