about section, padding & divs

--- a/index.html
+++ b/index.html
@@ -91,9 +91,29 @@
                                     <img src="src/assets/images/Feature-3.svg" alt="">
                                 </div>
                                 <h4 class="feature-title mt-24">Helpful Support</h4>
-                                <p class="text-sm mb-0">If you've found a bug or error in our API, or simply need assistance with an endpoint, our support team is always available to be contacted <a href="https://ponjo.club/discord">here</a>.</p>
+                                <p class="text-sm mb-0"> r support team is always available to be contacted <a href="https://ponjo.club/discord">here</a>.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-paragraph text-center cta">
+            <div class="container">
+                <div class="section-inner">
+                    <h4 class="mt-0 mb-0 text-center">About</h4>
+                    <p class="text-sm mb-0 text-center">
+                        Our goal is to enable developers to create feature-rich applications with ease.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="cta section">
+            <div class="container">
+                <div class="cta-inner section-inner">
+                    <h3 class="section-title mt-0">Are you interested?</h3>
+                    <div class="cta-cta">
+                        <a class="button button-primary button-wide-mobile" href="#">START USING THE API!</a>
                     </div>
                 </div>
             </div>
