changed color scheme, updated image preview

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Crescent API">
     <meta property="og:description" content="The official homepage of the Crescent API, serving all of your developer utility needs.">
-    <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.svg">
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.svg">
-    <meta name="theme-color" content="#4295f4">
+    <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
+    <meta name="theme-color" content="#ad4fe8">
     <link rel="stylesheet" href="src/assets/css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="icon" href="src/assets/images/Crescent-Logo.svg" type="img/svg">
@@ -91,7 +91,7 @@
                                     <img src="src/assets/images/Feature-3.svg" alt="">
                                 </div>
                                 <h4 class="feature-title mt-24">Helpful Support</h4>
-                                <p class="text-sm mb-0"> r support team is always available to be contacted <a href="https://ponjo.club/discord">here</a>.</p>
+                                <p class="text-sm mb-0">Our support team is always available to be contacted <a href="https://ponjo.club/discord">here</a>.</p>
                             </div>
                         </div>
                     </div>
