started docs page, refactored styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             A revolutionary API serving all of your developer utility needs. Countless endpoints, quick response times, and easy-to-parse JSON responses. Integrating utility services into your application has never been easier.
                         </p>
                         <div class="hero-cta">
-                            <a class="button button-primary" href="https://crescentapi.ml/docs">DOCUMENTATION</a>
+                            <a class="button button-primary" href="https://crescentmoon.app/endpoints">DOCUMENTATION</a>
                             <a class="button" href="https://ponjo.club/discord">DISCORD SERVER</a>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="cta-inner section-inner">
                     <h3 class="section-title mt-0">Are you interested?</h3>
                     <div class="cta-cta">
-                        <a class="button button-primary button-wide-mobile" href="#">START USING THE API!</a>
+                        <a class="button button-primary button-wide-mobile" href="https://crescentmoon.app/getting-started">START USING THE API!</a>
                     </div>
                 </div>
             </div>
@@ -129,39 +129,42 @@
                 </div>
                 <ul class="footer-links list-reset">
                     <li>
-                        <a href="#">About</a>
+                        <a href="https://crescentmoon.app/getting-started">Getting Started</a>
                     </li>
                     <li>
-                        <a href="#">Documentation</a>
+                        <a href="https://crescentmoon.app/endpoints">Documentation & Endpoints</a>
                     </li>
                     <li>
-                        <a href="#">FAQs</a>
+                        <a href="https://crescentmoon.app/faq">FAQs</a>
                     </li>
                     <li>
-                        <a href="#">Support</a>
+                        <a href="https://ponjo.club/discord">Support</a>
+                    </li>
+                    <li>
+                        <a href="https://crescentmoon.app/about">About Us</a>
                     </li>
                 </ul>
                 <ul class="footer-social-links list-reset">
                     <li>
-                        <a href="">
+                        <a href="https://ponjo.club/discord">
                             <span class="screen-reader-text">Discord</span>
                             <i class="fab fa-discord" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://twitter.com/PonjoDev">
                             <span class="screen-reader-text">Twitter</span>
                             <i class="fab fa-twitter" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://crescentmoon.app/endpoints">
                             <span class="screen-reader-text">Documentation</span>
                             <i class="fas fa-bookmark" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="mailto:eerie@ponjo.club">
                             <span class="screen-reader-text">Contact</span>
                             <i class="fas fa-paper-plane" style="color: #0270D7; font-size: 18px"></i>
                         </a>
