added minecraft bedrock query endpoint

--- a/endpoints.html
+++ b/endpoints.html
@@ -74,6 +74,17 @@
                         <code>/v1/chatbot?message={message}</code><br>
                         <code>Obtain a chatbot response message.</code>
                     </p>
+                    <p class="text-sm mt-0">Game Queries</p>
+                    <p class="mt-0">
+                        <span class="badge badge-post">GET REQUEST</span>
+                        <code class="mt-0">/v1/query/mcbe?host={host}&port={port}</code><br>
+                        <code>Get the status of a Minecraft: Bedrock Edition server.</code>
+                    </p>
+                    <p class="mt-0">
+                        <span class="badge badge-post">GET REQUEST</span>
+                        <code class="mt-0">/v1/query/minecraft?host={host}&port={port}</code><br>
+                        <code>Get the status of a Minecraft: Java Edition server.</code>
+                    </p>
                     <p class="text-sm mt-0">Image Manipulation</p>
                     <p class="mt-0">
                         <span class="badge badge-post">POST REQUEST</span>
