fixed endpoint doc formatting

--- a/endpoints.html
+++ b/endpoints.html
@@ -49,62 +49,62 @@
         </section>
         <section class="section-paragraph text-center cta">
             <div class="container">
-                <div class="section-inner">
-                    <h4 class="mt-0 mb-16 text-center">All Endpoints</h4>
+                <div class="section-inner text-center">
+                    <h4 class="mt-0 mb-16 text-center" style="font-size: 30px;">All Endpoints</h4>
                     <p class="text-sm mt-8">
-                    <p class="text-sm mt-0">Information & Statistics</p>
+                    <p class="text-sm mt-0" style="font-size: 20px;">Information & Statistics</p>
                     <p class="mt-0">
-                        <span class="badge badge-get">GET REQUEST</span>
-                        <code>/v1/status</code><br>
-                        <code>Get the status of the API.</code>
+                        <span class="badge badge-get">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/status</code><br>
+                        <code class="crescent-code">Get the status of the API.</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-get">GET REQUEST</span>
-                        <code>/v1/stats?endpoint={endpoint}</code><br>
-                        <code>View statistics of a particular endpoint.</code>
+                        <span class="badge badge-get">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/stats?endpoint={endpoint}</code><br>
+                        <code class="crescent-code">View statistics of a particular endpoint.</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-get">GET REQUEST</span>
-                        <code>/v1/info</code><br>
-                        <code>View information about the API.</code>
+                        <span class="badge badge-get">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/info</code><br>
+                        <code class="crescent-code">View information about the API.</code>
                     </p>
                     <p class="text-sm mt-0">Artificial Intelligence</p>
                     <p class="mt-0">
-                        <span class="badge badge-get">GET REQUEST</span>
-                        <code>/v1/chatbot?message={message}</code><br>
-                        <code>Obtain a chatbot response message.</code>
+                        <span class="badge badge-get">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/chatbot?message={message}</code><br>
+                        <code class="crescent-code">Obtain a chatbot response message.</code>
                     </p>
                     <p class="text-sm mt-0">Game Queries</p>
                     <p class="mt-0">
-                        <span class="badge badge-post">GET REQUEST</span>
-                        <code class="mt-0">/v1/query/mcbe?host={host}&port={port}</code><br>
-                        <code>Get the status of a Minecraft: Bedrock Edition server.</code>
+                        <span class="badge badge-post">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/query/mcbe?host={host}&port={port}</code><br>
+                        <code class="crescent-code">Get the status of a Minecraft: Bedrock Edition server.</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-post">GET REQUEST</span>
-                        <code class="mt-0">/v1/query/minecraft?host={host}&port={port}</code><br>
-                        <code>Get the status of a Minecraft: Java Edition server.</code>
+                        <span class="badge badge-post">GET REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/query/minecraft?host={host}&port={port}</code><br>
+                        <code class="crescent-code">Get the status of a Minecraft: Java Edition server.</code>
                     </p>
                     <p class="text-sm mt-0">Image Manipulation</p>
                     <p class="mt-0">
-                        <span class="badge badge-post">POST REQUEST</span>
-                        <code class="mt-0">/v1/images/trigger?image={image-URL}</code><br>
-                        <code>Give an image a "triggered" GIF overlay.</code>
+                        <span class="badge badge-post">POST REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/images/trigger?image={image-URL}</code><br>
+                        <code class="crescent-code">Give an image a "triggered" GIF overlay.</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-post">POST REQUEST</span>
-                        <code class="mt-0">/v1/images/gay?image={image-URL}</code><br>
-                        <code>Make your image a little more gay!</code>
+                        <span class="badge badge-post">POST REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/images/gay?image={image-URL}</code><br>
+                        <code class="crescent-code">Make your image a little more gay!</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-post">POST REQUEST</span>
-                        <code class="mt-0">/v1/images/jail?image={image-URL}</code><br>
-                        <code>Give yourself a nice mugshot.</code>
+                        <span class="badge badge-post">POST REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/images/jail?image={image-URL}</code><br>
+                        <code class="crescent-code">Give yourself a nice mugshot.</code>
                     </p>
                     <p class="mt-0">
-                        <span class="badge badge-post">POST REQUEST</span>
-                        <code class="mt-0">/v1/images/wanted?image={image-URL}</code><br>
-                        <code>Make yourself wanted by the police.</code>
+                        <span class="badge badge-post">POST REQUEST</span><br>
+                        <code class="crescent-code-bold">/v1/images/wanted?image={image-URL}</code><br>
+                        <code class="crescent-code">Make yourself wanted by the police.</code>
                     </p>
                 </div>
             </div>
