updated homepage, preparation for cname

--- a/endpoints.html
+++ b/endpoints.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <title>Crescent API | Endpoints</title>
+    <title>Ponjo API | Endpoints</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Crescent API | Endpoints">
-    <meta property="og:site_name" content="crescentmoon.app">
-    <meta property="og:description" content="Here you can find all endpoints & documentation for the Crescent API.">
+    <meta property="og:title" content="Ponjo API | Endpoints">
+    <meta property="og:site_name" content="api.ponjo.club/endpoints">
+    <meta property="og:description" content="Here you can find all endpoints & documentation for the Ponjo API.">
     <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
     <meta name="theme-color" content="#ad4fe8">
@@ -32,7 +32,7 @@
         <section class="section-paragraph text-center cta mb-0">
             <div class="container-sm">
                 <p class="text-sm mb-0 text-center">
-                    Welcome to the endpoint page of the Crescent API! Here, you can find all available endpoints,
+                    Welcome to the endpoint page of the Ponjo API! Here, you can find all available endpoints,
                     how to access them, and view sample responses. With over 50 endpoints, it's almost certain
                     you'll be able to find this API of great use. Responses are easily-parsable in a straightforward
                     JSON format to allow for seamless implementation into your application.
@@ -44,6 +44,10 @@
                     manipulation routes) require> the URI components to be properly encoded. Failure
                     to do so will result in the request not going through. If you're not familiar with URI
                     encoding, you can learn more <a href="https://en.wikipedia.org/wiki/Percent-encoding">here</a>.
+                    Thanks for supporting us!
+                </p>
+                <p class="text-sm mt-32 mb-0 text-center">
+                    Origin URL: <a href="https://app.ponjo.club">https://app.ponjo.club</a>
                 </p>
             </div>
         </section>
