--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <title>Crescent API</title>
+    <title>Ponjo API</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Crescent API">
-    <meta property="og:site_name" content="crescentmoon.app">
-    <meta property="og:description" content="The official homepage of the Crescent API, serving all of your developer utility needs.">
+    <meta property="og:title" content="Ponjo API">
+    <meta property="og:site_name" content="api.ponjo.club">
+    <meta property="og:description" content="The official homepage of the Ponjo API, serving all of your developer utility needs.">
     <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
     <meta name="theme-color" content="#ad4fe8">
@@ -37,12 +37,12 @@
             <div class="container">
                 <div class="hero-inner">
                     <div class="hero-copy">
-                        <h1 class="hero-title mt-0">Crescent API</h1>
+                        <h1 class="hero-title mt-0">Ponjo API</h1>
                         <p>
                             A revolutionary API serving all of your developer utility needs. Countless endpoints, quick response times, and easy-to-parse JSON responses. Integrating utility services into your application has never been easier.
                         </p>
                         <div class="hero-cta">
-                            <a class="button button-primary" href="https://crescentmoon.app/endpoints">DOCUMENTATION</a>
+                            <a class="button button-primary" href="https://api.ponjo.club/endpoints">DOCUMENTATION</a>
                             <a class="button" href="https://ponjo.club/discord">DISCORD SERVER</a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                                     <img src="src/web/assets/images/Feature-1.svg" alt="">
                                 </div>
                                 <h4 class="feature-title mt-24">Countless Endpoints</h4>
-                                <p class="text-sm mb-0">The Crescent API has numerous utility endpoints to assist you in creating a flexible, responsive, and productive application.</p>
+                                <p class="text-sm mb-0">The Ponjo API has numerous utility endpoints to assist you in creating a flexible, responsive, and productive application.</p>
                             </div>
                         </div>
                         <div class="feature text-center is-revealing">
@@ -104,7 +104,7 @@
                 <div class="cta-inner section-inner">
                     <h3 class="section-title mt-0">Are you interested?</h3>
                     <div class="cta-cta">
-                        <a class="button button-primary button-wide-mobile" href="https://crescentmoon.app/getting-started">START USING THE API!</a>
+                        <a class="button button-primary button-wide-mobile" href="https://api.ponjo.club/getting-started">START USING THE API!</a>
                     </div>
                 </div>
             </div>
@@ -120,13 +120,13 @@
                 </div>
                 <ul class="footer-links list-reset">
                     <li>
-                        <a href="https://crescentmoon.app/getting-started">Guide</a>
+                        <a href="https://api.ponjo.club/getting-started">Guide</a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/endpoints">Documentation</a>
+                        <a href="https://api.ponjo.club/endpoints">Documentation</a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/faq">FAQs</a>
+                        <a href="https://api.ponjo.club/faq">FAQs</a>
                     </li>
                     <li>
                         <a href="https://ponjo.club/discord">Support</a>
@@ -140,13 +140,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/PonjoDev">
+                        <a href="https://twitter.com/Eerie6560">
                             <span class="screen-reader-text">Twitter</span>
                             <i class="fab fa-twitter" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/endpoints">
+                        <a href="https://api.ponjo.club/endpoints">
                             <span class="screen-reader-text">Documentation</span>
                             <i class="fas fa-bookmark" style="color: #0270D7; font-size: 18px"></i>
                         </a>
@@ -158,7 +158,7 @@
                         </a>
                     </li>
                 </ul>
-                <div class="footer-copyright">&copy; 2021 Ponjo Development. All rights reserved.</div>
+                <div class="footer-copyright">&copy; 2021 Ponjo Team. All rights reserved.</div>
             </div>
         </div>
     </footer>
